--- a/style.css
+++ b/style.css
@@ -60,23 +60,29 @@ body {
   align-items: center;
   line-height: 31px;
   height: 30px;
+  gap: 20px;
 }
 .header__menu-option {
   text-decoration: none;
   color: black;
   line-height: 31px;
-  font-weight: 500;
   padding: 0 10px;
   border-radius: 4px;
-  font-size: 15px;
+  font-size: 16px;
+  position: relative;
+  font-family: "Anek Telugu", sans-serif;
+  font-weight: 600;
+  letter-spacing: 0.5px;
 }
 .header__menu-option:hover {
   background-color: #F7F6F4;
   cursor: pointer;
 }
 .header__menu-icon {
-  width: 15px;
-  height: 15px;
+  position: absolute;
+  bottom: 10px;
+  width: 14px;
+  height: 14px;
 }
 .header__right-content {
   height: 100%;
