--- a/style.css
+++ b/style.css
@@ -54,13 +54,14 @@ body {
   text-decoration: none;
   color: black;
   font-weight: bold;
+  letter-spacing: -0.4px;
 }
 .header__menu {
+  margin-top: 7px;
   display: flex;
   align-items: center;
-  line-height: 31px;
-  height: 30px;
   gap: 20px;
+  margin-left: 5px;
 }
 .header__menu-option {
   text-decoration: none;
