--- a/style.scss
+++ b/style.scss
@@ -9,7 +9,7 @@ body{
     position: relative;
 }
 .container{
-    max-width: 1420px;
+    max-width: 1455px;
     width: 100%;
     padding-left: 20px;
     padding-right: 20px;
@@ -24,7 +24,7 @@ body{
     right: 0;
 
     &__content{
-        height: 80px;
+        height: 81px;
         display: flex;
         justify-content: space-between;
         align-items: center;
@@ -58,7 +58,7 @@ body{
         margin-top: 7px;
         display: flex;
         align-items: center;
-        gap:20px;
+        gap:17px;
         margin-left: 5px;
     }
     &__menu-option{
@@ -82,13 +82,16 @@ body{
         bottom: 10px;
         width: 14px;
         height: 14px;
+        margin-left: 3px;
     }
     &__right-content{
+        margin-top: 5px;
+        margin-right: 10px;
         height: 100%;
         width: auto;
         display: flex;
         align-items: center;
-        gap: 20px;
+        gap:3px;
     }
     &__button{
         background-color:#e16259;
@@ -103,4 +106,11 @@ body{
         background-color: #DA625A;
         cursor: pointer;
     }
+}
+hr{
+    transform: rotate(90deg);
+        background-color: rgb(0 0 0 / 10%);
+        height: 1px;
+        width: 20px;
+        border-style: none;
 }
